# ns8-supervised-ml-lab

./: .gitignore  AGENT-LOG.md  AGENT-RULES.md  Makefile  PHASED-PLAN.md  README.md  REPO-POLISH.md  UI-FIX.md  UI-INFO.md  UI-PHASE.md  UI-UPGRADES.md  WB-OPT.md  pyproject.toml
configs/: task_a.yaml  task_a_seed1.yaml  task_b.yaml  task_b_groupN.yaml  task_b_seed1.yaml  task_c.yaml  task_c_seed1.yaml
notebooks/: 01_data_exploration.ipynb
reports/results/: 20251231_224640_task_a_view_logreg_tune_summary.json  20251231_224640_task_a_view_rf_clf_tune_summary.json  20251231_224640_task_a_view_svm_rbf_tune_summary.json  20251231_224707_task_b_kbucket_logreg_tune_summary.json  20251231_224707_task_b_kbucket_rf_clf_tune_summary.json  20251231_224707_task_b_kbucket_svm_rbf_tune_summary.json  20251231_224946_task_c_regress_n_rf_reg_tune_summary.json  20251231_224946_task_c_regress_n_ridge_tune_summary.json  20251231_230027_task_a_view_logreg_tune_summary.json  20251231_230027_task_a_view_rf_clf_tune_summary.json  20251231_230027_task_a_view_svm_rbf_tune_summary.json  20251231_230054_task_a_view_logreg_tune_summary.json  20251231_230054_task_a_view_rf_clf_tune_summary.json  20251231_230054_task_a_view_svm_rbf_tune_summary.json  20251231_230126_task_b_kbucket_logreg_tune_summary.json  20251231_230126_task_b_kbucket_rf_clf_tune_summary.json  20251231_230126_task_b_kbucket_svm_rbf_tune_summary.json  (+34 more)
scripts/: train_baselines.py  tune.py
tests/: test_data.py  test_features.py  test_grids.py  test_splits.py  test_train.py  test_tune.py
ui/: app.py  config.yaml  utils.py
(+12 files in other folders)
